--- a/public/examples/example1.html
+++ b/public/examples/example1.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Floating Voxel Sakura Island</title>
-</head>
-<body>
-  <script type="module">
-    import { createVoxelSceneHTML } from './voxel-scene-template.js';
-    import { sceneCode } from './example1.scene.js';
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Floating Voxel Sakura Island</title>
+  </head>
+  <body>
+    <script type="module">
+      import { createVoxelSceneHTML } from './voxel-scene-template.js';
+      import { sceneCode } from './example1.scene.js';
 
-    document.open();
-    document.write(createVoxelSceneHTML(sceneCode, 'Floating Voxel Sakura Island'));
-    document.close();
-  </script>
-</body>
+      document.open();
+      document.write(
+        createVoxelSceneHTML(sceneCode, 'Floating Voxel Sakura Island')
+      );
+      document.close();
+    </script>
+  </body>
 </html>
